feature: event-service test complete