@@ -4,7 +4,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.quartz.SchedulerException;
 import org.springframework.stereotype.Service;
-import ru.calendorny.eventservice.data.dto.EventInfo;
 import ru.calendorny.eventservice.data.entity.EventEntity;
 import ru.calendorny.eventservice.data.entity.EventLabelEntity;
 import ru.calendorny.eventservice.data.entity.ParticipantEntity;
@@ -13,7 +12,6 @@ import ru.calendorny.eventservice.data.mapper.EventMapper;
 import ru.calendorny.eventservice.dto.LabelDto;
 import ru.calendorny.eventservice.dto.ParticipantDto;
 import ru.calendorny.eventservice.dto.ReminderDto;
-import ru.calendorny.eventservice.dto.RruleDto;
 import ru.calendorny.eventservice.dto.enums.MeetingType;
 import ru.calendorny.eventservice.dto.enums.ParticipantStatus;
 import ru.calendorny.eventservice.dto.request.CreateEventRequest;
@@ -21,7 +19,6 @@ import ru.calendorny.eventservice.dto.request.UpdateEventInfoRequest;
 import ru.calendorny.eventservice.dto.request.UpdateEventReminderRequest;
 import ru.calendorny.eventservice.dto.response.EventDetailedResponse;
 import ru.calendorny.eventservice.dto.response.EventShortResponse;
-import ru.calendorny.eventservice.exception.BadRequestException;
 import ru.calendorny.eventservice.exception.ForbiddenException;
 import ru.calendorny.eventservice.exception.NotFoundException;
 import ru.calendorny.eventservice.exception.ServiceException;
@@ -33,10 +30,12 @@ import ru.calendorny.eventservice.repository.ParticipantRepository;
 import ru.calendorny.eventservice.repository.ReminderRepository;
 import ru.calendorny.eventservice.service.EventManagementService;
 import ru.calendorny.eventservice.service.EventSchedulingService;
-import ru.calendorny.eventservice.util.rrule.RruleEventCalculator;
+import ru.calendorny.eventservice.rrule.RruleEventCalculator;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -63,7 +62,9 @@ public class EventManagementServiceImpl implements EventManagementService {
 
     @Override
     public EventDetailedResponse createEvent(UUID userId, CreateEventRequest createEventRequest) {
-        List<EventLabelEntity> eventLabels = getEventLabelsEntitiesFromRequest(createEventRequest.labels());
+        List<EventLabelEntity> eventLabels = Optional.ofNullable(createEventRequest.labels())
+            .map(this::getEventLabelsEntitiesFromRequest)
+            .orElse(Collections.emptyList());
 
         EventEntity newEvent = eventMapper.toEntity(createEventRequest, eventLabels, userId);
         EventEntity savedEvent = eventRepository.save(newEvent);
@@ -73,12 +74,13 @@ public class EventManagementServiceImpl implements EventManagementService {
         }
 
         List<ParticipantDto> participants = createEventRequest.participants();
-        if (!participants.isEmpty()) {
-            createParticipants(participants, savedEvent);
-        }
+        if (participants != null) createParticipants(participants, savedEvent);
+
         ReminderDto reminderDto = createEventRequest.reminder();
-        createEventReminders(userId, reminderDto, savedEvent);
+        if (reminderDto != null) createEventReminders(userId, reminderDto, savedEvent);
+
         List<ReminderEntity> savedReminders = reminderRepository.findAllByEvent_IdAndUserId(savedEvent.getId(), userId);
+
         return eventMapper.toDetailedResponseWithReminders(savedEvent, savedReminders);
     }
 
@@ -96,26 +98,27 @@ public class EventManagementServiceImpl implements EventManagementService {
 
     private List<EventLabelEntity> getEventLabelsEntitiesFromRequest(List<Long> eventLabelId) {
         List<EventLabelEntity> eventLabels = new ArrayList<>();
+        if (eventLabelId == null) return eventLabels;
         for (Long labelId : eventLabelId) {
             EventLabelEntity eventLabelEntity = eventLabelRepository.findById(labelId)
-                .orElseThrow(() -> new BadRequestException("Label with id: %s was not found".formatted(labelId)));
+                .orElseThrow(() -> new NotFoundException("Label with id: %s was not found".formatted(labelId)));
             eventLabels.add(eventLabelEntity);
         }
         return eventLabels;
     }
 
     private void createEventReminders(UUID userId, ReminderDto reminderDto, EventEntity eventEntity) {
-        LocalDateTime start = eventEntity.getStart();
-        LocalDateTime end = eventEntity.getEnd();
-        RruleDto rruleDto = eventEntity.getRrule();
-        EventInfo eventInfo = EventInfo.builder()
-            .eventId(eventEntity.getId())
-            .title(eventEntity.getTitle())
-            .location(eventEntity.getLocation())
-            .build();
+        if (reminderDto == null) return;
         for (Integer minutesBefore : reminderDto.minutesBefore()) {
             try {
-                UUID notificationJobId = eventSchedulingService.schedule(eventInfo, userId, rruleDto, start, end, minutesBefore);
+                UUID notificationJobId = eventSchedulingService.schedule(
+                    eventMapper.toEventInfo(eventEntity),
+                    userId,
+                    eventEntity.getRrule(),
+                    eventEntity.getStart(),
+                    eventEntity.getEnd(),
+                    minutesBefore
+                );
                 ReminderEntity newReminder = ReminderEntity.builder()
                     .userId(userId)
                     .event(eventEntity)
@@ -127,10 +130,10 @@ public class EventManagementServiceImpl implements EventManagementService {
                 throw new ServiceException("Can't set reminder to event: %s".formatted(e.getMessage()));
             }
         }
-
     }
 
     private void createParticipants(List<ParticipantDto> participants, EventEntity event) {
+        if (participants == null) return;
         for (ParticipantDto participantDto : participants) {
             ParticipantEntity participant = ParticipantEntity.builder()
                 .event(event)
@@ -139,7 +142,9 @@ public class EventManagementServiceImpl implements EventManagementService {
                 .invitedAt(LocalDateTime.now())
                 .status(ParticipantStatus.PENDING)
                 .build();
-            participantRepository.save(participant);
+            System.out.println("repository save: %s".formatted(participant));
+            ParticipantEntity savedParticipant = participantRepository.save(participant);
+            event.getParticipants().add(savedParticipant);
         }
     }
 
@@ -150,7 +155,7 @@ public class EventManagementServiceImpl implements EventManagementService {
             .map(eventMapper::toShortResponse)
             .toList());
         List<EventEntity> recurEvents = eventRepository.findAllRecurEventsInRange(userId);
-        for (EventEntity recurEvent :recurEvents) {
+        for (EventEntity recurEvent : recurEvents) {
             result.addAll(rruleEventCalculator.generateOccurrences(eventMapper.toDetailedResponseWithoutReminders(recurEvent), from, to));
         }
         return result;
@@ -158,24 +163,18 @@ public class EventManagementServiceImpl implements EventManagementService {
 
     @Override
     public EventDetailedResponse getEventDetailedInfoById(UUID userId, Long eventId) {
-        EventEntity event = eventRepository.findById(eventId)
+        EventEntity event = eventRepository.findActiveById(eventId)
             .orElseThrow(() -> new NotFoundException("Event with id: %s not found".formatted(eventId)));
-        if (!event.isActive()) {
-            throw new NotFoundException("Event with id: %s not found".formatted(eventId));
-        }
         List<ReminderEntity> savedReminders = reminderRepository.findAllByEvent_IdAndUserId(eventId, userId);
         return eventMapper.toDetailedResponseWithReminders(event, savedReminders);
     }
 
     @Override
     public void deleteEventById(UUID userId, Long eventId) {
-        EventEntity event = eventRepository.findById(eventId)
+        EventEntity event = eventRepository.findActiveById(eventId)
             .orElseThrow(() -> new NotFoundException("Event with id: %s not found".formatted(eventId)));
-        if (!userId.equals(event.getOrganizerId())) {
-            throw new ForbiddenException("Only organizer can delete events");
-        }
         List<ReminderEntity> reminders = reminderRepository.findAllByEvent_Id(eventId);
-        for (ReminderEntity reminder : reminders){
+        for (ReminderEntity reminder : reminders) {
             try {
                 eventSchedulingService.deleteJob(reminder.getNotificationJobId());
             } catch (SchedulerException e) {
@@ -188,11 +187,8 @@ public class EventManagementServiceImpl implements EventManagementService {
 
     @Override
     public void updateEventInfo(UUID userId, Long eventId, UpdateEventInfoRequest updateEventInfoRequest) {
-        EventEntity event = eventRepository.findById(eventId)
+        EventEntity event = eventRepository.findActiveById(eventId)
             .orElseThrow(() -> new NotFoundException("Event with id: %s not found".formatted(eventId)));
-        if (!event.isActive()) {
-            throw new NotFoundException("Event with id: %s not found".formatted(eventId));
-        }
         if (!userId.equals(event.getOrganizerId())) {
             throw new ForbiddenException("Only organizer can update event main info");
         }
@@ -204,7 +200,6 @@ public class EventManagementServiceImpl implements EventManagementService {
                 throw new ServiceException("Can't delete event notification: %s".formatted(e.getMessage()));
             }
         }
-
         event.setTitle(updateEventInfoRequest.title());
         event.setDescription(updateEventInfoRequest.description());
         event.setLocation(updateEventInfoRequest.location());
@@ -219,8 +214,7 @@ public class EventManagementServiceImpl implements EventManagementService {
                 event.setMeeting(false);
                 event.setMeetingType(MeetingType.NONE);
                 event.setVideoMeetingUrl(null);
-            }
-            else {
+            } else {
                 if (event.getMeetingType() != updateEventInfoRequest.meetingType()) {
                     event.setMeetingType(updateEventInfoRequest.meetingType());
                     event.setVideoMeetingUrl(null);
@@ -229,13 +223,20 @@ public class EventManagementServiceImpl implements EventManagementService {
             }
         }
         List<UUID> oldParticipants = event.getParticipants().stream().map(ParticipantEntity::getUserId).toList();
-        List<UUID> newParticipants = updateEventInfoRequest.participants().stream().map(ParticipantDto::userId).toList();
-        event.setParticipants(updateEventInfoRequest.participants().stream().map(p -> ParticipantEntity.builder()
-            .event(event)
-            .userId(p.userId())
-            .status(p.status())
-            .build()
-        ).collect(Collectors.toList()));
+        List<UUID> newParticipants = Optional.ofNullable(updateEventInfoRequest.participants())
+            .orElse(Collections.emptyList())
+            .stream()
+            .map(ParticipantDto::userId)
+            .toList();
+        event.setParticipants(Optional.ofNullable(updateEventInfoRequest.participants())
+            .orElse(Collections.emptyList())
+            .stream()
+            .map(p -> ParticipantEntity.builder()
+                .event(event)
+                .userId(p.userId())
+                .status(p.status())
+                .build()
+            ).collect(Collectors.toList()));
         EventEntity savedEvent = eventRepository.save(event);
 
         List<UUID> deletedParticipants = oldParticipants.stream().filter(id -> !newParticipants.contains(id)).toList();
@@ -243,7 +244,15 @@ public class EventManagementServiceImpl implements EventManagementService {
             participantRepository.deleteByUserId(participant);
         }
         List<UUID> onlyNewParticipants = newParticipants.stream().filter(id -> !oldParticipants.contains(id)).toList();
-        createParticipants(updateEventInfoRequest.participants().stream().filter(p -> onlyNewParticipants.contains(p.userId())).collect(Collectors.toList()), savedEvent);
+        createParticipants(
+            Optional.ofNullable(updateEventInfoRequest.participants())
+                .orElse(Collections.emptyList())
+                .stream()
+                .filter(p -> onlyNewParticipants.contains(p.userId()))
+                .collect(Collectors.toList()),
+            savedEvent
+        );
+
         List<UUID> survivorParticipants = oldParticipants.stream().filter(newParticipants::contains).toList();
         for (UUID participant : survivorParticipants) {
             ReminderDto reminder = ReminderDto.builder()
@@ -263,11 +272,8 @@ public class EventManagementServiceImpl implements EventManagementService {
                 throw new ServiceException("Can't delete event notification: %s".formatted(e.getMessage()));
             }
         }
-        EventEntity event = eventRepository.findById(eventId)
+        EventEntity event = eventRepository.findActiveById(eventId)
             .orElseThrow(() -> new NotFoundException("Event with id: %s not found".formatted(eventId)));
-        if (!event.isActive()) {
-            throw new NotFoundException("Event with id: %s not found".formatted(eventId));
-        }
         createEventReminders(userId, updateEventReminderRequest.reminder(), event);
     }
 
